--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ByteSteam | Unified Workplace Solution</title>
+    <title>ByteSteam  ✦  Unified Workplace Solution</title>
     <script src="https://kit.fontawesome.com/687f020d79.js" crossorigin="anonymous"></script>
   </head>
   <body>
